mobileSemiRegleCommit
reste a faire : todo :
regler pb liste signalement dans mobile
change css mobile
firebase
bouton synchroniser
affichage liste des users bloques (mobile affichage + access et web access denied )